Fix webhook response info.

--- a/src/v1/schemas/models/Webhook/WebhookDelivery.yaml
+++ b/src/v1/schemas/models/Webhook/WebhookDelivery.yaml
@@ -2,7 +2,8 @@ WebhookDelivery:
   type: string
   format: string
   nullable: false
-  example: "JSON"
+  example:
+    - "JSON"
   description: Format of the delivered response.
   enum:
     - JSON
