Add active field to auto complete things.

--- a/src/v1/schemas/autocomplete/AutocompleteAccount.yaml
+++ b/src/v1/schemas/autocomplete/AutocompleteAccount.yaml
@@ -25,6 +25,11 @@ AutocompleteAccount:
       format: string
       example: "Checking Account ($123.45)"
       description: Asset accounts and liabilities have a second field with the given date's account balance in the account currency or primary currency.
+    active:
+      type: boolean
+      format: boolean
+      example: true
+      description: Is the bill active or not?
     type:
       type: string
       format: string
