--- a/src/v1/schemas/autocomplete/AutocompleteRuleGroup.yaml
+++ b/src/v1/schemas/autocomplete/AutocompleteRuleGroup.yaml
@@ -18,3 +18,8 @@ AutocompleteRuleGroup:
       format: string
       example: "Some rule group."
       description: Description of the rule group found by auto-complete.
+    active:
+      type: boolean
+      format: boolean
+      example: true
+      description: Is the bill active or not?
