--- a/src/v1/schemas/autocomplete/AutocompleteRecurrence.yaml
+++ b/src/v1/schemas/autocomplete/AutocompleteRecurrence.yaml
@@ -18,3 +18,8 @@ AutocompleteRecurrence:
       format: string
       example: "Should trigger daily."
       description: Description of the recurrence found by auto-complete.
+    active:
+      type: boolean
+      format: boolean
+      example: true
+      description: Is the recurring transaction active or not?
