--- a/src/v1/schemas/autocomplete/AutocompleteRule.yaml
+++ b/src/v1/schemas/autocomplete/AutocompleteRule.yaml
@@ -18,3 +18,8 @@ AutocompleteRule:
       format: string
       example: "Useful rule."
       description: Description of the rule found by auto-complete.
+    active:
+      type: boolean
+      format: boolean
+      example: true
+      description: Is the bill active or not?
