--- a/src/v1/paths/models/recurrence.yaml
+++ b/src/v1/paths/models/recurrence.yaml
@@ -139,7 +139,7 @@
 /recurrences/{id}/trigger:
   post:
     summary: Trigger the creation of a transaction for a specific recurring transaction
-    description: Trigger the creation of a transaction for a specific recurring transaction
+    description: Trigger the creation of a transaction for a specific recurring transaction. All recurrences have a set of future occurrences. For those moments, you can trigger the creation of the transaction. That means the transaction will be created NOW, instead of on the indicated date. The transaction will be dated to _today_.
     operationId: triggerRecurrenceRecurrence
     parameters:
       _tpl_correlationParameter,3:
@@ -153,7 +153,7 @@
       - in: query
         name: date
         description: |
-          A date formatted YYYY-MM-DD. This is the date for which you want the recurrence to fire.
+          A date formatted YYYY-MM-DD. This is the date for which you want the recurrence to fire. You can take the date from the list of occurrences in the recurring transaction.
         required: true
         schema:
           type: string
