--- a/src/v1/paths/charts/balance.yaml
+++ b/src/v1/paths/charts/balance.yaml
@@ -11,8 +11,9 @@
       _tpl_mandatoryDateRangeParameters,3:
       - in: query
         name: period
-        description: | 
+        description: > 
           Optional period to group the data by. If not provided, it will default to '1M' or whatever is deemed relevant for the range provided.
+          
           If you want to know which periods are available, see the enums or get the configuration value: `GET /api/v1/configuration/firefly.valid_view_ranges`
         required: false
         nullable: true
