--- a/src/v1/paths/charts/balance.yaml
+++ b/src/v1/paths/charts/balance.yaml
@@ -9,44 +9,8 @@
     parameters:
       _tpl_correlationParameter,3:
       _tpl_mandatoryDateRangeParameters,3:
-      - in: query
-        name: period
-        description: |
-          Optional period to group the data by. If not provided, it will default to '1M' or whatever is deemed relevant for the range provided.
-
-          If you want to know which periods are available, see the enums or get the configuration value: `GET /api/v1/configuration/firefly.valid_view_ranges`
-        required: false
-        schema:
-          type: string
-          enum:
-            - 1D
-            - 1W
-            - 1M
-            - 3M
-            - 6M
-            - 1Y
-          example: 1M
-      - in: query
-        name: preselected
-        description: |
-          Optional set of preselected accounts to limit the chart to. This may be easier than submitting all asset accounts manually, for example.
-          If you want to know which selection are available, see the enums here or get the configuration value: `GET /api/v1/configuration/firefly.preselected_accounts`
-
-          - `empty`: do not do a pre-selection
-          - `all`: select all asset and all liability accounts
-          - `assets`: select all asset accounts
-          - `liabilities`: select all liability accounts
-
-          If no accounts are found, the user's "frontpage accounts" preference will be used. If that is empty, all asset accounts will be used.
-        required: false
-        schema:
-          type: string
-          enum:
-            - empty
-            - all
-            - assets
-            - liabilities
-          example: all
+      _tpl_periodParameter,3:
+      _tpl_preselectedParameter,3:
       - in: query
         name: accounts[]
         description: |
