--- a/src/v1/schemas/models/Budget/BudgetStore.yaml
+++ b/src/v1/schemas/models/Budget/BudgetStore.yaml
@@ -21,6 +21,12 @@ BudgetStore:
       format: string
       example: "Some notes"
       nullable: true
+    fire_webhooks:
+      type: boolean
+      format: boolean
+      example: true
+      default: true
+      description: "Whether or not to fire the webhooks that are related to this event."
     auto_budget_type:
       $ref: '#/components/schemas/AutoBudgetType'
     auto_budget_currency_id:
