Add 'daily' option to InterestPeriodProperty enum
Signed-off-by: Radith Samarakoon <104646586+RadCod3@users.noreply.github.com>

--- a/src/shared/properties/InterestPeriodProperty.yaml
+++ b/src/shared/properties/InterestPeriodProperty.yaml
@@ -5,6 +5,7 @@ InterestPeriodProperty:
   description: "Mandatory when type is liability. Period over which the interest is calculated."
   nullable: true
   enum:
+    - daily
     - weekly
     - monthly
     - quarterly
